apps/servarr/qbittorrent/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: servarr
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: lscr.io/linuxserver/qbittorrent
        volumeMounts:
        - name: qbittorrent-data
          mountPath: /config
        - name: qbittorrent-downloads
          mountPath: /downloads
        ports:
        - name: webui
          containerPort: 8080
        - name: torrenting
          containerPort: 6881
      volumes:
      - name: qbittorrent-data
        persistentVolumeClaim:
          claimName: qbittorrent-data-pvc
      - name: qbittorrent-downloads
        persistentVolumeClaim: 
          claimName: qbittorrent-downloads-pvc
      - name: gluetun-data
        persistentVolumeClaim:
          claimName: gluetun-data-pvc
