apps/servarr/qbittorrent/service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: servarr
spec:
  type: ClusterIP
  selector:
    app: qbittorrent
  ports: 
  - name: web
    protocol: TCP
    port: 8080
    targetPort: webui

  - name: torrenting-tcp
    protocol: TCP
    port: 6881
    targetPort: torrenting

  - name: torrenting-udp
    protocol: UDP
    port: 6881
    targetPort: torrenting
